Fix for bug 154734. We need to unsecape the original message uri else IMAP will have trouble to deal with it. R=cavin, SR=bienvenu