mailnews/mime/src/mimedrft.cpp
@@ -280,6 +280,7 @@ mime_dump_attachments ( attachmentList );
     PRInt32 i = msgURI.FindChar('?');
     if (i != kNotFound)
       msgURI.Truncate(i);
+    NS_UnescapeURL(msgURI);
     pMsgComposeParams->SetOriginalMsgURI(msgURI.get());
     
     rv = msgComposeService->OpenComposeWindowWithParams(nsnull /* default chrome */, pMsgComposeParams);
